fix: alter position of dark mode checkbox in navbar.tsx

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@
 		@apply mb-8 md:flex border-4 border-indigo-500/50 dark:border-yellow-200/50 bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-800;
 	}
 	article .content {
-		@apply md:p-6 text-center md:text-left space-y-4;
+		@apply md:p-6 text-center md:text-left;
 	}
 }
 
@@ -61,9 +61,12 @@ a {
 }
 
 #hide-checkbox {
-	opacity: 0;
-	height: 0;
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
 	width: 0;
+	height: 0;
+	opacity: 0;
 }
 
 .toggle {
